@@ -1,5 +1,4 @@
 src/Readme
 src/surv_callback.csp
 src/cox_callback.csp
-^\.hg/.*
-^\.hg$
+
